# mercari-shopper-agent

./: .env.example  .gitignore  Dockerfile  README.md  clear_cache.py  cli.py  docker-compose.yaml  evaluation_result.json  main.py  pyproject.toml  requirements.txt  web.py
app/: agent.py  exception.py  prompt.py  types.py  utils.py
app/libs/market_research/: ebay.py  market_research.py  utils.py
app/libs/mercari/: __init__.py  search.py
app/libs/mercari/pages/: item_detail.py  search.py
app/libs/mercari_jp/: __init__.py  config.py  search.py
app/libs/mercari_jp/pages/: item_detail.py  search.py
app/prompts/: agent.py  agent_jp.py  evaluate_item.py  evaluate_item_jp.py  market_research_query.py  select_best_item.py
app/tools/: __init__.py  evaluate_search_result.py  market_research.py  mercari_jp_search.py  mercari_search.py  price_calculator.py  select_best_item.py
docs/: documentation.md  example_recommendations.md
experiment/agent_trajectory/: trajectory-1.json  trajectory-3.json  trajectory-4.json  trajectory-5.json
script/: evaluate.py
script/agent_trajectory/: trajectory-2.json
web/: __main__.py
